# pokerrl

./: .gitignore  Deep_CFR_Complete_Paper.aux  ablation_study_results.json  analysis_data.json  analysis_report.md  analyze_results.py  capacity_analysis.csv  environment.yaml  requirements.txt  run_clean_demo.py  run_working_experiments.py  test_openspiel_fix.py
.claude/: settings.local.json
.venv-os/: pyvenv.cfg
analysis/: aggregate_runs.py  build_manifest.py  generate_tables.py  plot_convergence.py  plot_final_comparison.py  plot_lstm_distribution.py  plot_success_rates.py  publication_report.py  results_validator.py  statistical_analysis.py  training_diagnostics.py
analysis_output/: ablation_summary.csv  ablation_summary.tex  comprehensive_results.csv  openspiel_cfr_kuhn.csv  openspiel_cfr_leduc.csv  openspiel_sdcfr_leduc.csv  research_analysis_report.md  run_manifest.json  summary_snapshot.json
configs/: kuhn_ablation_20seed.yaml  leduc_ablation_20seed.yaml  leduc_ablation_batch32.yaml  leduc_ablation_full.yaml  leduc_ablation_update10.yaml  leduc_architecture_ablation_cpu.yaml  leduc_opponent_model_cpu.yaml  leduc_scaling_ablation_cpu.yaml
cpu_experiment_results/: robustness_test_leduc_batch32.json  robustness_test_leduc_update10.json
docs/: ablation_report.aux  ablation_report.bbl  ablation_report.blg  ablation_report.out  ablation_report.tex  post_run_followup.md
dual_rl_poker/: .gitignore  Makefile  (+35 more)
dual_rl_poker/rust/: Cargo.toml  build.rs
dual_rl_poker/rust/src/: env_batch.rs  kuhn_poker.rs  leduc_poker.rs  lib.rs  replay_buffer.rs  utils.rs
(+438 files in other folders)
